--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
 name: test
 channels:
   - defaults
-  - anaconda
   - conda-forge
+  - anaconda
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
@@ -16,7 +16,7 @@ dependencies:
   - cassandra-driver=3.25.0
   - certifi=2021.5.30
   - cffi=1.14.6
-  - chardet=4.0.0
+  - chardet=3.0.4
   - charset-normalizer=2.0.4
   - colorama=0.4.4
   - conda-package-handling=1.7.3
@@ -29,8 +29,6 @@ dependencies:
   - joblib=1.1.0
   - krb5=1.19.2
   - ld_impl_linux-64=2.35.1
-  - libblas=3.9.0
-  - libcblas=3.9.0
   - libedit=3.1.20210714
   - libev=4.33
   - libffi=3.3
@@ -38,13 +36,10 @@ dependencies:
   - libgfortran-ng=7.5.0
   - libgfortran4=7.5.0
   - libgomp=9.3.0
-  - libiconv=1.16
-  - liblapack=3.9.0
   - libopenblas=0.3.13
   - libprotobuf=3.17.2
   - libsodium=1.0.18
   - libstdcxx-ng=9.3.0
-  - libzlib=1.2.11
   - more-itertools=8.8.0
   - multidict=5.1.0
   - ncurses=6.2
@@ -52,12 +47,9 @@ dependencies:
   - numexpr=2.7.3
   - numpy=1.19.1
   - numpy-base=1.19.1
-  - openblas=0.3.13
-  - openblas-devel=0.3.13
   - openssl=1.1.1k
   - packaging=21.0
   - pandas=1.1.5
-  - pip=22.2.1
   - pluggy=0.13.1
   - protobuf=3.17.2
   - py=1.10.0
@@ -65,12 +57,11 @@ dependencies:
   - pycparser=2.20
   - pymssql=2.1.5
   - pyopenssl=21.0.0
-  - pyparsing=3.0.9
+  - pyparsing=3.0.4
   - pysocks=1.7.1
   - pytest=6.2.4
   - python=3.8.11
   - python-dateutil=2.8.2
-  - python_abi=3.8
   - pytz=2021.3
   - pyzmq=22.2.1
   - readline=8.1
@@ -99,5 +90,6 @@ dependencies:
     - gnureadline==8.1.2
     - icc-rt==2019.0
     - intel-openmp==2022.1.0
-    - setuptools==63.3.0
+    - pip==22.2.2
+    - setuptools==63.4.1
 prefix: /opt/conda/envs/test
