--- a/environment.yml
+++ b/environment.yml
@@ -7,96 +7,113 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
-  - aiohttp=3.7.4
-  - async-timeout=3.0.1
-  - atomicwrites=1.4.0
-  - attrs=21.2.0
-  - blas=1.0
+  - aiohttp=3.8.1
+  - aiosignal=1.2.0
+  - async-timeout=4.0.2
+  - atomicwrites=1.4.1
+  - attrs=22.1.0
+  - blas=1.1
   - brotlipy=0.7.0
-  - ca-certificates=2021.7.5
+  - bzip2=1.0.8
+  - ca-certificates=2022.6.15
   - cassandra-driver=3.25.0
-  - certifi=2021.5.30
-  - cffi=1.14.6
-  - chardet=4.0.0
-  - charset-normalizer=2.0.4
-  - colorama=0.4.4
-  - conda-package-handling=1.7.3
-  - cryptography=3.4.7
-  - cx_oracle=8.2.1
-  - dask-core=1.2.2
-  - freetds=1.3
-  - greenlet=1.1.1
-  - icc_rt=2019.0
-  - idna=2.10
+  - certifi=2022.6.15
+  - cffi=1.15.1
+  - charset-normalizer=2.1.0
+  - click=8.1.3
+  - cloudpickle=2.1.0
+  - colorama=0.4.5
+  - conda-package-handling=1.8.1
+  - cryptography=37.0.4
+  - cx_oracle=8.3.0
+  - dask-core=2022.8.0
+  - dpcpp-cpp-rt=2022.0.1
+  - freetds=1.3.3
+  - frozenlist=1.3.1
+  - fsspec=2022.7.1
+  - geomet=0.2.1.post1
+  - greenlet=1.1.2
+  - icc_rt=2022.1.0
+  - idna=3.3
   - iniconfig=1.1.1
-  - intel-openmp=2021.3.0
+  - intel-cmplr-lib-rt=2022.0.1
+  - intel-cmplr-lic-rt=2022.0.1
+  - intel-opencl-rt=2022.0.1
+  - intel-openmp=2022.0.1
   - joblib=1.1.0
-  - krb5=1.19.2
-  - ld_impl_linux-64=2.35.1
-  - libblas=3.9.0
-  - libcblas=3.9.0
+  - keyutils=1.6.1
+  - krb5=1.19.3
+  - ld_impl_linux-64=2.36.1
   - libedit=3.1.20191231
   - libev=4.33
-  - libffi=3.3
-  - libgcc-ng=9.3.0
+  - libffi=3.4.2
+  - libgcc-ng=12.1.0
   - libgfortran-ng=7.5.0
   - libgfortran4=7.5.0
-  - libgomp=9.3.0
+  - libgomp=12.1.0
   - libiconv=1.16
-  - liblapack=3.9.0
-  - libopenblas=0.3.13
-  - libprotobuf=3.17.2
+  - libnsl=2.0.0
+  - libopenblas=0.3.18
+  - libprotobuf=3.20.1
   - libsodium=1.0.18
-  - libstdcxx-ng=9.3.0
-  - libzlib=1.2.11
-  - more-itertools=8.8.0
-  - multidict=5.1.0
+  - libstdcxx-ng=12.1.0
+  - libuuid=2.32.1
+  - libzlib=1.2.12
+  - locket=1.0.0
+  - more-itertools=8.14.0
+  - multidict=6.0.2
   - ncurses=6.3
   - nomkl=1.0
-  - numexpr=2.7.3
-  - numpy=1.19.1
-  - numpy-base=1.19.1
+  - numexpr=2.8.3
+  - numpy=1.22.3
+  - numpy-base=1.22.3
   - openblas=0.3.4
-  - openssl=1.1.1k
-  - packaging=21.0
-  - pandas=1.1.5
+  - openssl=1.1.1q
+  - packaging=21.3
+  - pandas=1.4.3
+  - partd=1.2.0
   - pip=22.2.2
-  - pluggy=0.13.1
-  - protobuf=3.17.2
-  - py=1.10.0
+  - pluggy=1.0.0
+  - protobuf=3.20.1
+  - py=1.11.0
   - pycosat=0.6.3
-  - pycparser=2.20
-  - pymssql=2.1.5
-  - pyopenssl=21.0.0
+  - pycparser=2.21
+  - pymssql=2.2.5
+  - pyopenssl=22.0.0
   - pyparsing=3.0.9
   - pysocks=1.7.1
-  - pytest=6.2.4
-  - python=3.8.10
+  - pytest=7.1.2
+  - python=3.10.5
   - python-dateutil=2.8.2
-  - python_abi=3.8
-  - pytz=2021.3
-  - pyzmq=22.2.1
+  - python_abi=3.10
+  - pytz=2022.1
+  - pyyaml=6.0
+  - pyzmq=23.2.0
   - readline=8.1.2
-  - requests=2.25.1
+  - requests=2.28.1
   - ruamel_yaml=0.15.100
-  - setuptools=59.8.0
+  - setuptools=63.4.2
   - six=1.16.0
-  - sqlalchemy=1.4.22
-  - sqlite=3.36.0
+  - sqlalchemy=1.4.40
+  - sqlite=3.39.2
+  - tbb=2021.5.0
   - tini=0.19.0
-  - tk=8.6.10
+  - tk=8.6.12
   - toml=0.10.2
-  - tqdm=4.61.2
-  - typing-extensions=3.10.0.2
-  - typing_extensions=3.10.0.2
-  - unixodbc=2.3.9
+  - tomli=2.0.1
+  - toolz=0.12.0
+  - tqdm=4.64.0
+  - typing-extensions=4.3.0
+  - typing_extensions=4.3.0
+  - tzdata=2022a
+  - unixodbc=2.3.10
   - urllib3=1.26.11
   - wheel=0.37.1
   - xz=5.2.5
   - yaml=0.2.5
-  - yarl=1.6.3
+  - yarl=1.7.2
   - zeromq=4.3.4
-  - zlib=1.2.11
+  - zlib=1.2.12
   - pip:
-    - crate==0.26.0
+    - crate==0.27.1
 prefix: /opt/conda/envs/test
