--- a/tensorflow_lite/environment.yml
+++ b/tensorflow_lite/environment.yml
@@ -151,6 +151,7 @@ dependencies:
   - tensorflow-estimator=2.6.0
   - termcolor=1.1.0
   - threadpoolctl=2.2.0
+  - tini=0.19.0
   - tk=8.6.12
   - toml=0.10.2
   - tornado=6.1
