--- a/tensorflow_lite/tflitefullbuild/tfilte_docker_base/environment_aggregate_mat.yml
+++ b/tensorflow_lite/tflitefullbuild/tfilte_docker_base/environment_aggregate_mat.yml
@@ -75,13 +75,10 @@ dependencies:
   - markupsafe=1.1.1
   - matplotlib=3.5.1
   - matplotlib-base=3.5.1
-  - mkl=2020.2
-  - mkl-service=2.3.0
-  - mkl_fft=1.3.0
-  - mkl_random=1.1.1
   - more-itertools=7.2.0
   - multidict=5.1.0
   - munkres=1.1.4
+  - nomkl=3.0
   - numexpr=2.7.3
   - numpy=1.19.2
   - numpy-base=1.19.2
