--- a/tensorflow_lite/tflitefullbuild/tfilte_docker_base/environment_aggregate.yml
+++ b/tensorflow_lite/tflitefullbuild/tfilte_docker_base/environment_aggregate.yml
@@ -3,150 +3,151 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - _tflow_select=2.1.0=gpu
-  - absl-py=0.15.0=pyhd3eb1b0_0
-  - aiohttp=3.8.1=py37h7f8727e_1
-  - aiosignal=1.2.0=pyhd3eb1b0_0
-  - astunparse=1.6.3=py_0
-  - async-timeout=4.0.1=pyhd3eb1b0_0
-  - asynctest=0.13.0=py_0
-  - attrs=19.3.0=py_0
-  - backcall=0.1.0=py37_0
-  - blas=1.0=mkl
-  - blinker=1.4=py37h06a4308_0
-  - brotli=1.0.9=he6710b0_2
-  - brotlipy=0.7.0=py37h27cfd23_1003
-  - c-ares=1.18.1=h7f8727e_0
-  - ca-certificates=2022.4.26=h06a4308_0
-  - cachetools=4.2.2=pyhd3eb1b0_0
-  - cassandra-driver=3.25.0=py37h27cfd23_0
-  - certifi=2022.5.18.1=py37h06a4308_0
-  - cffi=1.15.0=py37h7f8727e_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - click=8.0.4=py37h06a4308_0
-  - cryptography=37.0.1=py37h9ce1e76_0
-  - cudatoolkit=10.1.243=h6bb024c_0
-  - cudnn=7.6.5=cuda10.1_0
-  - cx_oracle=8.3.0=py37h7f8727e_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - dataclasses=0.8=pyh6d0b6a4_7
-  - decorator=4.4.0=py37_1
-  - expat=2.4.4=h295c915_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetds=1.00.97=h1ba5d50_0
-  - freetype=2.11.0=h70c0345_0
-  - frozenlist=1.2.0=py37h7f8727e_0
-  - gast=0.4.0=pyhd3eb1b0_0
-  - giflib=5.2.1=h7b6447c_0
-  - glib=2.63.1=h5a9c865_0
-  - google-auth=2.6.0=pyhd3eb1b0_0
-  - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
-  - google-pasta=0.2.0=pyhd3eb1b0_0
-  - grpcio=1.42.0=py37hce63b2e_0
-  - h5py=2.10.0=py37hd6299e0_1
-  - hdf5=1.10.6=hb1b8bf9_0
-  - icu=58.2=he6710b0_3
-  - idna=3.3=pyhd3eb1b0_0
-  - importlib-metadata=4.11.3=py37h06a4308_0
-  - importlib_metadata=0.23=py37_0
-  - iniconfig=1.1.1=pyhd3eb1b0_0
-  - intel-openmp=2020.2=254
-  - ipython=7.8.0=py37h39e3cac_0
-  - jedi=0.15.1=py37_0
-  - jinja2=2.10.3=py_0
-  - joblib=1.1.0=pyhd3eb1b0_0
-  - jpeg=9e=h7f8727e_0
-  - jsonschema=3.1.1=py37_0
-  - keras=2.4.3=hd3eb1b0_0
-  - keras-base=2.4.3=pyhd3eb1b0_0
-  - keras-preprocessing=1.1.2=pyhd3eb1b0_0
-  - kiwisolver=1.4.2=py37h295c915_0
-  - lcms2=2.12=h3be6417_0
-  - libffi=3.2.1=hf484d3e_1007
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libpng=1.6.37=hbc83047_0
-  - libprotobuf=3.19.1=h4ff587b_0
-  - libsodium=1.0.16=h1bed415_0
-  - libtiff=4.1.0=h2733197_0
-  - libwebp=1.2.2=h55f646e_0
-  - libwebp-base=1.2.2=h7f8727e_0
-  - libxml2=2.9.9=hea5a465_1
-  - markdown=3.3.4=py37h06a4308_0
-  - markupsafe=1.1.1=py37h14c3975_1
-  - matplotlib=3.5.1=py37h06a4308_1
-  - matplotlib-base=3.5.1=py37ha18d171_1
-  - more-itertools=7.2.0=py37_0
-  - multidict=5.1.0=py37h27cfd23_2
-  - munkres=1.1.4=py_0
-  - nomkl=3.0=0
-  - numexpr=2.7.3=py37hb2eb853_0
-  - numpy=1.19.2=py37hc896f84_1
-  - openssl=1.1.1o=h7f8727e_0
-  - opt_einsum=3.3.0=pyhd3eb1b0_1
-  - packaging=21.3=pyhd3eb1b0_0
-  - pandas=1.3.5=py37h8c16a72_0
-  - parso=0.5.1=py_0
-  - pcre=8.45=h295c915_0
-  - pexpect=4.7.0=py37_0
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=9.0.1=py37h22f2fdc_0
-  - pip=19.3.1=py37_0
-  - pluggy=0.13.1=py37h06a4308_0
-  - prompt_toolkit=2.0.10=py_0
-  - protobuf=3.19.1=py37h295c915_0
-  - ptyprocess=0.6.0=pyhd3eb1b0_2
-  - py=1.11.0=pyhd3eb1b0_0
-  - pyasn1=0.4.8=pyhd3eb1b0_0
-  - pyasn1-modules=0.2.8=py_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.4.2=py_0
-  - pymssql=2.1.5=py37h7b6447c_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
-  - pyparsing=3.0.4=pyhd3eb1b0_0
-  - pyqt=5.9.2=py37h05f1152_2
-  - pyrsistent=0.15.4=py37h7b6447c_0
-  - pysocks=1.7.1=py37_1
-  - pytest=6.2.2=py37h06a4308_2
-  - python=3.7.4=h265db76_1
-  - python-dateutil=2.8.0=py37_0
-  - python-flatbuffers=2.0=pyhd3eb1b0_0
-  - pytz=2021.3=pyhd3eb1b0_0
-  - pyyaml=6.0=py37h7f8727e_1
-  - pyzmq=18.1.0=py37he6710b0_0
-  - qt=5.9.7=h5867ecd_1
-  - requests=2.27.1=pyhd3eb1b0_0
-  - rsa=4.7.2=pyhd3eb1b0_1
-  - scikit-learn=1.0.2=py37h51133e4_1
-  - scipy=1.6.2=py37h91f5cce_0
-  - setuptools=41.4.0=py37_0
-  - sip=4.19.8=py37hf484d3e_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlalchemy=1.4.32=py37h7f8727e_0
-  - sqlite=3.33.0=h62c20be_0
-  - tensorboard=2.4.0=pyhc547734_0
-  - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow=2.4.1=gpu_py37ha2e99fa_0
-  - tensorflow-base=2.4.1=gpu_py37h29c2da4_0
-  - tensorflow-estimator=2.4.1=pyheb71bc4_0
-  - tensorflow-gpu=2.4.1=h30adc30_0
-  - termcolor=1.1.0=py37h06a4308_1
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.8=hbc83047_0
-  - toml=0.10.2=pyhd3eb1b0_0
-  - tornado=6.0.3=py37h7b6447c_3
-  - traitlets=4.3.3=py37h06a4308_0
-  - typing=3.10.0.0=py37h06a4308_0
-  - typing_extensions=4.1.1=pyh06a4308_0
-  - urllib3=1.26.9=py37h06a4308_0
-  - wcwidth=0.1.7=py37_0
-  - werkzeug=2.0.3=pyhd3eb1b0_0
-  - wheel=0.33.6=py37_0
-  - wrapt=1.13.3=py37h7f8727e_2
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.2.5=h7b6447c_0
-  - yarl=1.6.3=py37h27cfd23_0
-  - zeromq=4.3.1=he6710b0_3
-  - zipp=0.6.0=py_0
-  - zlib=1.2.11=h7f8727e_4
-  - zstd=1.3.7=h0b5b093_0
+  - attrs==19.3.0
+  - backcall==0.1.0
+  - blas==1.0
+  - brotlipy==0.7.0
+  - ca-certificates==2022.4.26
+  - cassandra-driver==3.25.0
+  - certifi==2022.5.18.1
+  - cffi==1.15.0
+  - cryptography==37.0.1
+  - cx_oracle==8.3.0
+  - decorator==4.4.0
+  - freetds==1.00.97
+  - idna==3.3
+  - importlib-metadata==4.11.3
+  - importlib_metadata==0.23
+  - iniconfig==1.1.1
+  - intel-openmp==2020.2
+  - ipython==7.8.0
+  - jedi==0.15.1
+  - jinja2==2.10.3
+  - jsonschema==3.1.1
+  - libffi==3.2.1
+  - libsodium==1.0.16
+  - markupsafe==1.1.1
+  - mkl==2020.2
+  - mkl-service==2.3.0
+  - mkl_fft==1.3.0
+  - mkl_random==1.1.1
+  - more-itertools==7.2.0
+  - numexpr==2.7.3
+  - numpy==1.19.2
+  - numpy-base==1.19.2
+  - openssl==1.1.1o
+  - packaging==21.3
+  - pandas==1.3.5
+  - parso==0.5.1
+  - pexpect==4.7.0
+  - pickleshare==0.7.5
+  - pip==19.3.1
+  - pluggy==0.13.1
+  - prompt_toolkit==2.0.10
+  - ptyprocess==0.6.0
+  - py==1.11.0
+  - pycparser==2.21
+  - pygments==2.4.2
+  - pymssql==2.1.5
+  - pyopenssl==22.0.0
+  - pyparsing==3.0.4
+  - pyrsistent==0.15.4
+  - pysocks==1.7.1
+  - pytest==6.2.2
+  - python=3.7
+  - python-dateutil==2.8.0
+  - pytz==2021.3
+  - pyzmq==18.1.0
+  - setuptools==41.4.0
+  - six==1.16.0
+  - sqlalchemy==1.4.32
+  - sqlite==3.33.0
+  - tk==8.6.8
+  - toml==0.10.2
+  - tornado==6.0.3
+  - traitlets==4.3.3
+  - typing_extensions==4.1.1
+  - urllib3==1.26.9
+  - wcwidth==0.1.7
+  - wheel==0.33.6
+  - xz==5.2.4
+  - zeromq==4.3.1
+  - zipp==0.6.0
+  - zlib==1.2.11
+  - aiohttp==3.8.1
+  - aiosignal==1.2.0
+  - async-timeout==4.0.1
+  - asynctest==0.13.0
+  - charset-normalizer==2.0.4
+  - frozenlist==1.2.0
+  - libprotobuf==3.19.1
+  - multidict==5.1.0
+  - protobuf==3.19.1
+  - requests==2.27.1
+  - yarl==1.6.3
+  - _tflow_select==2.1.0
+  - absl-py==0.15.0
+  - astunparse==1.6.3
+  - blinker==1.4
+  - brotli==1.0.9
+  - c-ares==1.18.1
+  - cachetools==4.2.2
+  - click==8.0.4
+  - cycler==0.11.0
+  - dataclasses==0.8
+  - expat==2.4.4
+  - fonttools==4.25.0
+  - freetype==2.11.0
+  - gast==0.4.0
+  - giflib==5.2.1
+  - glib==2.63.1
+  - google-auth==2.6.0
+  - google-auth-oauthlib==0.4.4
+  - google-pasta==0.2.0
+  - grpcio==1.42.0
+  - h5py==2.10.0
+  - hdf5==1.10.6
+  - icu==58.2
+  - joblib==1.1.0
+  - jpeg==9e
+  - keras==2.4.3
+  - keras-base==2.4.3
+  - keras-preprocessing==1.1.2
+  - kiwisolver==1.4.2
+  - lcms2==2.12
+  - libgfortran-ng==7.3.0
+  - libpng==1.6.37
+  - libtiff==4.1.0
+  - libwebp==1.2.2
+  - libwebp-base==1.2.2
+  - libxml2==2.9.9
+  - markdown==3.3.4
+  - matplotlib==3.5.1
+  - matplotlib-base==3.5.1
+  - munkres==1.1.4
+  - opt_einsum==3.3.0
+  - pcre==8.45
+  - pillow==9.0.1
+  - pyasn1==0.4.8
+  - pyasn1-modules==0.2.8
+  - pyqt==5.9.2
+  - python-flatbuffers==2.0
+  - pyyaml==6.0
+  - qt==5.9.7
+  - rsa==4.7.2
+  - scikit-learn==1.0.2
+  - scipy==1.6.2
+  - sip==4.19.8
+  - tensorboard==2.4.0
+  - tensorboard-plugin-wit==1.6.0
+  - tensorflow==2.4.1
+  - tensorflow-base==2.4.1
+  - tensorflow-estimator==2.4.1
+  - termcolor==1.1.0
+  - threadpoolctl==2.2.0
+  - typing==3.10.0.0
+  - werkzeug==2.0.3
+  - wrapt==1.13.3
+  - yaml==0.2.5
+  - zstd==1.3.7
 prefix: /opt/conda/envs/tensorflow
