--- a/tensorflow_lite/tflitefullbuild/tfilte_docker_base/Dockerfile - Copy
+++ b/tensorflow_lite/tflitefullbuild/tfilte_docker_base/Dockerfile - Copy
@@ -2,8 +2,7 @@
 
 ARG CONDAENV='tensorflow'
 ARG PYTHONENV='3.7'
-ARG TENSORFLOWDIR='tensorflow'
-ARG GITDIR='/tensorflow/tensorflow/lite/tools'
+ARG TENSORFLOWDIR='tensorflow_src/tensorflow/lite/tools'
 
 ###############
 # tflite-builder
@@ -19,25 +18,22 @@ ENV DEBIAN_FRONTEND=noninteractive
 # User Env
 ENV TENSORFLOWVER='2.4.1'
 ENV CONDARC='/opt/conda/.condarc'
-ENV TENSORFLOW_TARGET='native'
-ENV PYTHON='python3.7'
 ARG CONDAENV
 ARG PYTHONENV
 ARG TENSORFLOWDIR
-ARG GITDIR
 
-ADD --link --keep-git-dir=false https://github.com/tensorflow/tensorflow.git#v$TENSORFLOWVER /tensorflow
-COPY --link $GITDIR/make/downloads/ $GITDIR/make/downloads/
+ADD --link --keep-git-dir=false https://github.com/tensorflow/tensorflow.git#v$TENSORFLOWVER /tensorflow_src
+
+RUN rm -f /etc/apt/apt.conf.d/docker-clean
 
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
     <<EOF
     set -x
-    rm -f /etc/apt/apt.conf.d/docker-clean
     echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
     apt-get update
     DEBIAN_FRONTEND=noninteractive
-    apt-get install -y debhelper dh-python pybind11-dev python3-all python3-setuptools python3-wheel python3-numpy python3-pip libpython3-dev zlib1g-dev curl unzip git
+    apt-get install -y build-essential curl libjpeg-dev swig unzip zip zlib1g-dev python$PYTHONENV-dev python3-numpy
 EOF
 
 RUN --mount=type=cache,id=$CONDAENV,target=/opt/conda/pkgs,sharing=locked \
@@ -54,7 +50,8 @@ CON
     . ~/.bashrc
     . activate $CONDAENV
     python3 -m pip install -U pybind11 numpy pillow
-    $GITDIR/pip_package/build_pip_package.sh
+    $TENSORFLOWDIR/make/download_dependencies.sh
+    PYTHON=python$PYTHONENV $TENSORFLOWDIR/pip_package/build_pip_package.sh
 EOF
 
 ###############
@@ -72,16 +69,15 @@ ARG CONDAENV
 ARG PYTHONENV
 ARG TENSORFLOWDIR
 ENV ENVFILE='environment_aggregate.yml'
-ARG GITDIR
 
 # Install the package as normal and any packages in /wheel dir:
 COPY --link $ENVFILE /wheel/*.whl /
-COPY --link --from=tflite-builder $GITDIR/pip_package/gen/tflite_pip/python$PYTHONENV/dist/tflite_runtime-*.whl /
+COPY --link --from=tflite-builder /$TENSORFLOWDIR/pip_package/gen/tflite_pip/python$PYTHONENV/dist/tflite_runtime-*.whl /
 
 RUN --mount=type=cache,id=$CONDAENV,target=/opt/conda/pkgs,sharing=locked \
     <<EOF
     set -x
-    mamba env create -v conda_package_handling -f $ENVFILE 
+    mamba env create -v -f $ENVFILE 
     mamba run -n $CONDAENV python3 -m pip install --no-cache *.whl
     # Use conda-pack to create a standalone environment in /venv
     mamba install -y -c anaconda conda-pack
@@ -98,7 +94,7 @@ EOF
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
 # for us.
-FROM debian:buster-slim AS runtime
+FROM debian:bullseye-slim AS runtime
 
 # Copy entrypoint script
 COPY --link --chmod=755 entrypoint.sh /entrypoint.sh
