--- a/tensorflow_lite/tflitefullbuild/tfilte_docker_base/environment_aggregate.yml
+++ b/tensorflow_lite/tflitefullbuild/tfilte_docker_base/environment_aggregate.yml
@@ -120,4 +120,6 @@ dependencies:
   - typing==3.10.0.0
   - yaml==0.2.5
   - zstd==1.3.7
+  - conda-package-handling==1.8.1
+  - pybind11[version='>=2.4.3']
 prefix: /opt/conda/envs/tensorflow
