--- a/tensorflow_lite/tflitefullbuild/tfilte_docker_base/.dockerignore
+++ b/tensorflow_lite/tflitefullbuild/tfilte_docker_base/.dockerignore
@@ -1,6 +1,9 @@
+### Custom ###
 .git
 pack/
-tensorflow_src/*
+venv/
+env_scripts/
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
