--- a/tensorflow_lite/Dockerfile_quick
+++ b/tensorflow_lite/Dockerfile_quick
@@ -35,7 +35,7 @@ RUN --mount=type=cache,id=$CONDAENV,target=/opt/conda/pkgs,sharing=locked \
     --mount=type=cache,id=pip,target=/root/.cache/pip \
     <<EOF
     set -xe
-    mamba env create -vf $ENVFILE
+    mamba env create -f $ENVFILE
     # Add additional packages to the wheel folder so it installs at this step.
     mamba run -n $CONDAENV python3 -m pip install *.whl
     # Use conda-pack to create a standalone environment in /venv
