--- a/.drone.yml
+++ b/.drone.yml
@@ -18,8 +18,11 @@ steps:
     purge: true
     compress: true
     no_cache: false
-    build_args: BUILDKIT_INLINE_CACHE=1
-    cache_from: modem7/conda:latest
+    # build_args: BUILDKIT_INLINE_CACHE=1 # enabling this causes an implicit cache-to: inline
+    cache_from: 
+      - modem7/conda:latest
+      - modem7/conda:buildcache
+    cache_to: type=registry,mode=max,ref=modem7/conda:buildcache
     dockerfile: tensorflow_lite/Dockerfile
     context: tensorflow_lite/
     platforms: # if it doesn't work run docker run --privileged --rm tonistiigi/binfmt --install all
