--- a/tensorflow_lite/Dockerfile_quick
+++ b/tensorflow_lite/Dockerfile_quick
@@ -53,7 +53,7 @@ EOF
 # The runtime-stage image; we can use Debian as the
 # base image since the Conda env also includes Python
 # for us.
-FROM debian:buster-slim AS runtime
+FROM debian:bullseye-slim AS runtime
 ARG TINI_VERSION='v0.19.0'
 ADD --link --chmod=755 https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /tini
 
