--- a/tensorflow_lite/environment_aggregate.yml
+++ b/tensorflow_lite/environment_aggregate.yml
@@ -83,6 +83,7 @@ dependencies:
   - multidict==5.1.0
   - protobuf==3.19.1
   - requests==2.27.1
+  - tranquilizer==0.5.0
   - yarl==1.6.3
   - c-ares==1.18.1
   - cycler==0.11.0
