--- a/tensorflow_lite/environment_aggregate.yml
+++ b/tensorflow_lite/environment_aggregate.yml
@@ -3,15 +3,9 @@ channels:
   - anaconda
   - defaults
 dependencies:
-  - nomkl
   - conda-package-handling==1.8.1
   - pybind11[version='>=2.4.3']
   - python=3.7
-  - libopenblas==0.3.20
-  - libgcc-ng==11.2.0
-  - libstdcxx-ng==11.2.0
-  - libgfortran5==11.2.0
-  - libgfortran-ng==11.2.0
   - attrs==19.3.0
   - backcall==0.1.0
   - blas==1.0
@@ -36,11 +30,15 @@ dependencies:
   - libffi==3.2.1
   - libsodium==1.0.16
   - markupsafe==1.1.1
+  - mkl==2020.2
+  - mkl-service==2.3.0
+  - mkl_fft==1.3.0
+  - mkl_random==1.1.1
   - more-itertools==7.2.0
   - numexpr==2.7.3
   - numpy==1.19.2
   - numpy-base==1.19.2
-  - openssl==1.1.1o
+  - openssl==1.1.1q
   - packaging==21.3
   - pandas==1.3.5
   - parso==0.5.1
