--- a/.drone.yml
+++ b/.drone.yml
@@ -18,8 +18,7 @@ steps:
     purge: true
     compress: true
     no_cache: false
-    # build_args: BUILDKIT_INLINE_CACHE=1 # enabling this causes an implicit cache-to: inline
-    build_args: buildinfo-attrs=true
+    build_args: BUILDKIT_INLINE_CACHE=1 # enabling this causes an implicit cache-to: inline
     cache_from: 
       - modem7/conda:latest
       # - modem7/conda:buildcache
