--- a/.drone.yml
+++ b/.drone.yml
@@ -2,14 +2,14 @@
 
 kind: pipeline
 type: docker
-name: FullBuild
+name: CondaBuild
 
 platform:
   os: linux
   arch: amd64
   
 steps:
-- name: FullBuild
+- name: CondaBuild
   image: thegeeklab/drone-docker-buildx
   privileged: true
 
@@ -20,7 +20,7 @@ steps:
     no_cache: false
     build_args: BUILDKIT_INLINE_CACHE=1 # enabling this causes an implicit cache-to: inline
     cache_from: 
-      - modem7/conda:latest
+      - modem7/conda:conda
       # - modem7/conda:buildcache
     # cache_to: type=registry,mode=max,ref=modem7/conda:buildcache
     dockerfile: tensorflow_lite/Dockerfile_quick
@@ -32,7 +32,55 @@ steps:
     password:
       from_secret: docker_password
     tags:
-      - latest
+      - conda
+
+- name: slack
+  image: themaz/drone-slack
+  settings:
+    webhook:
+      from_secret: slack_hook
+  when:
+    status: [ success, failure ]
+
+trigger:
+  event:
+    - custom
+
+---
+
+kind: pipeline
+type: docker
+name: ChillerBuild
+
+platform:
+  os: linux
+  arch: amd64
+  
+steps:
+- name: ChillerBuild
+  image: thegeeklab/drone-docker-buildx
+  privileged: true
+
+  settings:
+    repo: modem7/conda
+    purge: true
+    compress: true
+    no_cache: false
+    build_args: BUILDKIT_INLINE_CACHE=1 # enabling this causes an implicit cache-to: inline
+    cache_from: 
+      - modem7/conda:chiller
+      # - modem7/conda:buildcache
+    # cache_to: type=registry,mode=max,ref=modem7/conda:buildcache
+    dockerfile: chiller/Dockerfile_quick
+    context: chiller/
+    platforms: # if it doesn't work run docker run --privileged --rm tonistiigi/binfmt --install all
+      - linux/amd64
+    username:
+      from_secret: docker_username
+    password:
+      from_secret: docker_password
+    tags:
+      - chiller
 
 - name: slack
   image: themaz/drone-slack
